--- a/assignment1/Computational_Finance_A1_Cormac_Berkery_12288160_.ipynb
+++ b/assignment1/Computational_Finance_A1_Cormac_Berkery_12288160_.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,33 +24,22 @@
     "\n",
     "#Time to maturity is one year\n",
     "T = 1\n",
-    "\n",
-    "steps = 10000\n",
-    "\n",
-    "#time steps\n",
-    "dt = T/steps\n",
-    "\n",
-    "#Up and down movements for the given volatility\n",
-    "up_val = np.exp(vol*np.sqrt(dt))\n",
-    "down_val = np.exp(-vol*np.sqrt(dt))\n",
-    "\n",
-    "#Probability of movement\n",
-    "p = (np.exp(r*dt) - down_val)/(up_val - down_val)\n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Final price of stock\n",
-    "def fin_stock_price(s_0, power):\n",
+    "def fin_stock_price(s_0, power, dt):\n",
     "    return s_0*(np.exp(vol*np.sqrt(dt))**(power))\n",
     "\n",
     "#Price of option at expiration\n",
     "def expiration_option_price(K, s_T):\n",
-    "    return max(0, K - s_T)\n",
+    "    return max(0, s_T - K)\n",
     "\n",
     "def fair_value(r, dt, p, prev_fair_val_1, prev_fair_val_2):\n",
     "    return np.exp(-r*dt)*(p*(prev_fair_val_1) + (1 - p)*prev_fair_val_2)\n"
@@ -58,16 +47,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "7.860736798724277"
+       "11.544690260823083"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,6 +68,7 @@
     "    row_values = []\n",
     "    #print(len(row_list))\n",
     "    prev_row_values = row_list[len(row_list) - 1]\n",
+    "    #print(len(prev_row_values))\n",
     "    for i in range(len(prev_row_values) -1):\n",
     "        #print(i)\n",
     "        fv = fair_value(r, dt, p, prev_row_values[i], prev_row_values[i+1])\n",
@@ -88,13 +78,17 @@
     "    \n",
     "def option_pricer(steps):\n",
     "    dt = T/steps\n",
+    "    up_val = np.exp(vol*np.sqrt(dt))\n",
+    "    down_val = np.exp(-vol*np.sqrt(dt))\n",
+    "    p = (np.exp(r*dt) - down_val)/(up_val - down_val)\n",
     "    #row_list = []\n",
     "    leaf_nodes = []\n",
-    "    for i in range(-steps, steps+1, 2):\n",
-    "        s_T = fin_stock_price(s_0, i)\n",
+    "    for i in range(steps, -steps-1, -2):\n",
+    "        s_T = fin_stock_price(s_0, i, dt)\n",
     "        end_option_price = expiration_option_price(K, s_T)\n",
     "        leaf_nodes.append(end_option_price)\n",
     "    row_list.append(leaf_nodes)\n",
+    "    #print(leaf_nodes)\n",
     "\n",
     "\n",
     "\n",
@@ -104,9 +98,16 @@
     "\n",
     "    return row_list[-1][0]\n",
     "    \n",
-    "option_pricer(steps)\n",
+    "option_pricer(1000)\n",
     "    \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
