--- a/assignment1/Computational_Finance_A1_Cormac_Berkery_12288160_.ipynb
+++ b/assignment1/Computational_Finance_A1_Cormac_Berkery_12288160_.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,16 +47,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "11.544690260823083"
+       "11.547481290156213"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +64,7 @@
    "source": [
     "row_list = []\n",
     "\n",
-    "def calculate_prev_row():\n",
+    "def calculate_prev_row(dt,p):\n",
     "    row_values = []\n",
     "    #print(len(row_list))\n",
     "    prev_row_values = row_list[len(row_list) - 1]\n",
@@ -94,11 +94,11 @@
     "\n",
     "\n",
     "    for i in range(steps):\n",
-    "        calculate_prev_row()\n",
+    "        calculate_prev_row(dt,p)\n",
     "\n",
     "    return row_list[-1][0]\n",
     "    \n",
-    "option_pricer(1000)\n",
+    "option_pricer(500)\n",
     "    \n"
    ]
   },
@@ -200,7 +200,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
