currrent version of part II, might change later

--- a/assignment2/Estimation of sensitivities in MC.ipynb
+++ b/assignment2/Estimation of sensitivities in MC.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,26 +10,25 @@
     "sigma = 0.2\n",
     "r = 0.06\n",
     "s0 = 100\n",
-    "epsilon = 0.02 #change between 0.01, 0.02, and 0.5\n",
+    "epsilon = 0.01 #change between 0.01, 0.02, and 0.5\n",
     "s_bumped = s0 + epsilon\n",
     "K = 99\n",
     "N = 365\n",
     "dt = T/N\n",
-    "M = 100000"
+    "M = 10**4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "random price of stock =  108.85113166811162\n",
-      "the deltas\n",
-      "0.07321315410546703\n"
+      "random price of stock =  148.84356880859778\n",
+      "(11.140825538098973, 11.543525256914798, 40.26997188158248)\n"
      ]
     }
    ],
@@ -37,6 +36,7 @@
     "import numpy as np\n",
     "\n",
     "#stock price paths\n",
+    "np.random.seed(3) #same/different seed for approx_delta for experiment\n",
     "\n",
     "def pricing(s0,r,T,sigma):\n",
     "    Z = np.random.normal(0,1)\n",
@@ -46,7 +46,7 @@
     "print(\"random price of stock = \", pricing(s0,r,T,sigma))\n",
     "\n",
     "\n",
-    "#option value formula, run twice for bumped and unbumped values\n",
+    "#option value formula, use twice for bumped and unbumped values\n",
     "\n",
     "def option_value(s0,r,T,sigma,K,M):\n",
     "   \n",
@@ -59,27 +59,15 @@
     "    price = np.exp(-r*T)*average\n",
     "    return(price)\n",
     "\n",
-    "def option_value_bumped(s_bumped,r,T,sigma,K,M):\n",
-    "   \n",
-    "    thesum = 0\n",
-    "    \n",
-    "    for i in range(M):\n",
-    "        thesum += max(pricing(s_bumped,r,T,sigma)-K, 0)\n",
-    "        \n",
-    "    average = thesum/M\n",
-    "    price = np.exp(-r*T)*average\n",
-    "    return(price)\n",
     "\n",
     "#euler approx of delta at time = t:\n",
     "def approx_delta():\n",
     "    unbumped = option_value(s0,r,T,sigma,K,M)\n",
-    "    bumped = option_value_bumped(s_bumped,r,T,sigma,K,M)\n",
+    "    bumped = option_value(s_bumped,r,T,sigma,K,M)\n",
     "    delta = ((bumped - unbumped) / epsilon)\n",
-    "    return(delta)\n",
+    "    return unbumped, bumped, delta\n",
     "\n",
-    "print(\"the deltas\")\n",
-    "for i in range(1):\n",
-    "    print(approx_delta())"
+    "print(approx_delta())"
    ]
   },
   {
@@ -91,26 +79,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n"
+      "0.5651528966039077\n"
      ]
     }
    ],
    "source": [
-    "def payoff():\n",
-    "    if pricing(s0,r,T,sigma) > K:\n",
-    "        payoff = 1\n",
-    "    else:\n",
-    "        payoff = 0\n",
-    "    return(payoff)\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
-    "print(payoff())"
+    "def digital_payoff():\n",
+    "    if pricing(s0,r,T,sigma) < K:\n",
+    "        payoff = 0\n",
+    "    else:\n",
+    "        payoff = 1\n",
+    "    return payoff\n",
+    "\n",
+    "def digital_option_value(s0,r,T,sigma,K,M):\n",
+    "   \n",
+    "    thesum = 0\n",
+    "    \n",
+    "    for i in range(M):\n",
+    "        thesum += digital_payoff()\n",
+    "        \n",
+    "    average = thesum/M\n",
+    "    price = np.exp(-r*T)*average\n",
+    "    return(price)\n",
+    "\n",
+    "print(digital_option_value(s0,r,T,sigma,K,M))"
    ]
   },
   {
