added ultimate function

--- a/assignment2/Estimation of sensitivities in MC.ipynb
+++ b/assignment2/Estimation of sensitivities in MC.ipynb
@@ -71,6 +71,77 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 163,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bumped:  4.944006317963819\n",
+      "unbumped:  4.940617688104622\n",
+      "delta:  -0.33886298591969677\n",
+      "BS delta:  -0.34088451169481104\n",
+      "Difference w/ analytic BS:  0.0020215257751142746\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.stats import norm\n",
+    "import numpy as np\n",
+    "\n",
+    "np.random.seed(3)\n",
+    "random = [np.random.normal(0,1) for x in range(M)]\n",
+    "\n",
+    "def MC_ultimate_function():\n",
+    "    \n",
+    "    stocks = []\n",
+    "    stocks_b = []\n",
+    "    \n",
+    "    payoffs = []\n",
+    "    payoffs_b = []\n",
+    "    \n",
+    "    for Z in random:\n",
+    "        S_T = s0*np.exp((r-0.5*sigma**2)*T+sigma*np.sqrt(T)*Z)     \n",
+    "        S_T_bumped = s_bumped*np.exp((r-0.5*sigma**2)*T+sigma*np.sqrt(T)*Z)\n",
+    "    \n",
+    "        stocks.append(S_T)\n",
+    "        stocks_b.append(S_T_bumped)\n",
+    "    \n",
+    "    \n",
+    "        payoff = max(K - S_T, 0)\n",
+    "        payoff_b = max(K - S_T_bumped, 0)\n",
+    "        \n",
+    "        payoffs.append(payoff)\n",
+    "        payoffs_b.append(payoff_b)\n",
+    "        \n",
+    "    average = sum(payoffs) / len(payoffs)\n",
+    "    average_b = sum(payoffs_b) / len(payoffs_b)\n",
+    "    \n",
+    "    price = np.exp(-r*T)*average\n",
+    "    price_b = np.exp(-r*T)*average_b\n",
+    "    \n",
+    "    \n",
+    "    delta = (price_b - price) / epsilon\n",
+    "    \n",
+    "    d1 = np.log(s0/K) + T*(r+(sigma**2/2))/sigma*np.sqrt(T)\n",
+    "    \n",
+    "    BS_delta = norm.cdf(d1) - 1\n",
+    "    \n",
+    "    error = delta - BS_delta\n",
+    "    \n",
+    "    return price, price_b, delta, BS_delta, error\n",
+    "\n",
+    "\n",
+    "print(\"bumped: \" , MC_ultimate_function()[0])\n",
+    "print(\"unbumped: \" , MC_ultimate_function()[1])\n",
+    "print(\"delta: \" , MC_ultimate_function()[2])\n",
+    "print(\"BS delta: \", MC_ultimate_function()[3])\n",
+    "print(\"Difference w/ analytic BS: \", MC_ultimate_function()[4])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
